Scripts to begin testing on compute1

--- a/testMJ.conf
+++ b/testMJ.conf
@@ -44,7 +44,34 @@ backend {
         # The expression is run from the execution directory for the script. The expression must create the directory
         temporary-directory = "$(mkdir -p /tmp/commands && echo /tmp/commands)"
 
-        submit = "bsub -J ${job_name} -cwd ${cwd} -o ${out} -e ${err} /usr/bin/env bash ${script}"
+        runtime-attributes = """
+        Int cpus = 2
+        Float memory_gb = 8
+        String? docker
+        String? job_group = "/${USER}/compute-cruchagac"
+
+
+        submit = """
+          bsub \
+            -J ${job_name} \
+            -cwd ${cwd} \
+            -o ${out} \
+            -e ${err} \
+            /usr/bin/env bash ${script}
+        """
+        submit-docker = """
+          bsub \
+            -g ${job_group}
+            -q general
+            -G compute-cruchagac
+            -R ${"select[" + 'mem>' + ${memory_gb} + "G" + ' && ncpus>' + "${cpus}" + '] rusage[mem=' + ${memory_gb} + 'G] span[hosts=1]'}
+            -cwd ${docker_cwd} \
+            -o ${out} \
+            -e ${err} \
+            -M ${memory_gb + "G"}\
+            -a "docker(${docker})" \
+            ${job_shell} ${docker_script}
+        """
         kill = "bkill ${job_id}"
         check-alive = "bjobs ${job_id}"
         job-id-regex = "Job <(\\d+)>.*"
