fixing parsing... I think

--- a/testMJ.conf
+++ b/testMJ.conf
@@ -64,7 +64,7 @@ backend {
             -g ${job_group}
             -q general
             -G compute-cruchagac
-            -R ${"select[" + 'mem>' + ${memory_gb} + "G" + ' && ncpus>' + "${cpus}" + '] rusage[mem=' + ${memory_gb} + 'G] span[hosts=1]'}
+            -R ${"select[" + 'mem>' + memory_gb + "G" + ' && ncpus>' + cpus + '] rusage[mem=' + memory_gb + 'G] span[hosts=1]'}
             -cwd ${docker_cwd} \
             -o ${out} \
             -e ${err} \
