--- a/testMJ.conf
+++ b/testMJ.conf
@@ -48,7 +48,7 @@ backend {
         Int cpus = 2
         Float memory_gb = 8
         String? docker
-        String? job_group = "/${USER}/compute-cruchagac"
+        String? job_group = /crom/compute-cruchagac
         """
 
         submit = """
