--- a/testMJ.conf
+++ b/testMJ.conf
@@ -28,7 +28,7 @@ system {
 
 workflow-options {
   # Directory where to write per workflow logs
-  workflow-log-dir: "cromwell-data/cromwell-workflow-logs"
+  workflow-log-dir: "/scratch1/fs1/cruchagac/Cromwell/cromwell-workflow-logs"
 
   # Workflow-failure-mode determines what happens to other calls when a call fails. Can be either ContinueWhilePossible or NoNewCalls.
   # Can also be overridden in workflow options. Defaults to NoNewCalls. Uncomment to change:
@@ -80,18 +80,18 @@ backend {
 
         # `temporary-directory` creates the temporary directory for commands.
         # The expression is run from the execution directory for the script. The expression must create the directory
-        temporary-directory = "$(mkdir -p cromwell-data/commands && echo cromwell-data/commands)"
+        temporary-directory = "$(mkdir -p commands && echo commands)"
 
 	# Root directory where Cromwell writes job results.  This directory must be
         # visible and writeable by the Cromwell process as well as the jobs that Cromwell
         # launches.
-	root = "cromwell-data/cromwell-executions"
+	root = "/scratch1/fs1/cruchagac/Cromwell"
 
         # Root directory where Cromwell writes job results in the container. This value
         # can be used to specify where the execution folder is mounted in the container.
         # it is used for the construction of the docker_cwd string in the submit-docker
         # value above.
-        dockerRoot = "cromwell-data/cromwell-executions"
+        dockerRoot = "/scratch1/fs1/cruchagac/Cromwell"
 
 	runtime-attributes = """
         Int cpus = 2
