--- a/testMJ.conf
+++ b/testMJ.conf
@@ -102,7 +102,7 @@ backend {
 
         submit-docker = """
 	  LSF_DOCKER_PORTS="" \
-	  LSF_DOCKER_PRESERVE_ENVIRONMENT=false \
+    LSB_DOCKER_ENV_FILE="./baseEnvs/cromwell.env" \
 	  LSF_DOCKER_VOLUMES="/storage1/fs1/cruchagac/Active:/storage1/fs1/cruchagac/Active \
 	  /scratch1/fs1/cruchagac:/scratch1/fs1/cruchagac \
 	  ${cwd}:${docker_cwd}" \
