add bash to run script

--- a/testMJ.conf
+++ b/testMJ.conf
@@ -114,9 +114,9 @@ backend {
             -cwd ${cwd} \
             -o ${out} \
             -e cromwell-data/cromwell-workflow-logs/cromwell-%J.err \
-	    -N \
+	          -N \
             -M ${memory_gb}G \
-            -a "docker(${docker})" ${docker_script}
+            -a "docker(${docker})" /bin/bash ${docker_script}
         """
         kill = "bkill ${job_id}"
 	docker-kill = "bkill ${job_id}"
