Added file localization options to allow symlinks

--- a/testMJ.conf
+++ b/testMJ.conf
@@ -76,6 +76,19 @@ backend {
       actor-factory = "cromwell.backend.impl.sfs.config.ConfigBackendLifecycleActorFactory"
 
       config {
+        filesystems {
+          local {
+            localization: [
+              "hard-link", "soft-link", "copy"
+            ]
+
+            caching {
+              duplication-strategy: [
+                "hard-link", "soft-link", "copy"
+              ]
+            }
+          }
+        }
         concurrent-job-limit = 10
 
         # `temporary-directory` creates the temporary directory for commands.
