fix error from documentation being wrong

--- a/testMJ.conf
+++ b/testMJ.conf
@@ -132,7 +132,7 @@ backend {
             -a "docker(${docker})" /bin/bash ${docker_script}
         """
         kill = "bkill ${job_id}"
-	docker-kill = "bkill ${job_id}"
+	      kill-docker = "bkill ${job_id}"
         check-alive = "bjobs -noheader -o stat ${job_id} | /bin/grep 'PEND\\|RUN'"
         job-id-regex = "Job <(\\d+)>.*"
       }
