use cromwell directory as base

--- a/testMJ.conf
+++ b/testMJ.conf
@@ -28,7 +28,7 @@ system {
 
 workflow-options {
   # Directory where to write per workflow logs
-  workflow-log-dir: "/scratch1/fs1/cruchagac/matthew.j/cromwell-data/cromwell-workflow-logs"
+  workflow-log-dir: "/scratch1/fs1/cruchagac/cromwell/cromwell-data/cromwell-workflow-logs"
 
   # Workflow-failure-mode determines what happens to other calls when a call fails. Can be either ContinueWhilePossible or NoNewCalls.
   # Can also be overridden in workflow options. Defaults to NoNewCalls. Uncomment to change:
@@ -98,13 +98,13 @@ backend {
 	# Root directory where Cromwell writes job results.  This directory must be
         # visible and writeable by the Cromwell process as well as the jobs that Cromwell
         # launches.
-        root = "/scratch1/fs1/cruchagac/matthew.j/cromwell-data/cromwell-executions"
+        root = "/scratch1/fs1/cruchagac/cromwell/cromwell-data/cromwell-executions"
 
         # Root directory where Cromwell writes job results in the container. This value
         # can be used to specify where the execution folder is mounted in the container.
         # it is used for the construction of the docker_cwd string in the submit-docker
         # value above.
-        dockerRoot = "/scratch1/fs1/cruchagac/matthew.j/cromwell-data/cromwell-executions"
+        dockerRoot = "/scratch1/fs1/cruchagac/cromwell/cromwell-data/cromwell-executions"
 
 	runtime-attributes = """
         Int cpus = 2
